--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: lightgray;
+}
+
 #calculator {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: blue;
+    background-color: #CDF7CA;
     width: 400px;
+    border: 4px solid #6EC46B;
+    border-radius: 20px;
+    margin-top: 20px;
+    box-shadow: 5px 5px 5px #A0A0A0;
 }
 
 #displayContainer {
-    width: 350px;
-    height: 20px;
-    background-color: gray;
+    display: flex;
+    align-items: center;
+    font-size: 30px;
+    width: 326px;
+    height: 60px;
+    background-color: #C3F7CE;
+    border: 5px solid #6EC46B;
     margin: 5px;
+    margin-top: 30px;
+    border-radius: 10px;
+}
+
+#screen {
+    margin-left: 5px;
 }
 
 
@@ -20,19 +42,59 @@
     flex-wrap: wrap;
     flex-grow: 1;
     width: 350px;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
 
 .button {
+    color: white;
+    font-size: 20px;
     width: 80px;
+    height: 50px;
+    margin: 2px;
+    box-sizing: border-box;
+    background-color: #8BAF92;
+    border: 3px solid #59705D;
+    border-radius: 10px;
+
 }
 
+.button:hover {
+    background-color: #A9D3B1;
+    border: 3px solid white;
+}
+
+.button:active {
+    border: 3px solid white;
+    background-color: #86A58C;
+}
+
+.clear {
+    color: black;
+    background-color: #EA9864;
+    border: 3px solid black;
+}
+
+.clear:hover {
+    color: black;
+    background-color: #E8B08D;
+    border: 3px solid white;
+}
+
+.clear:active {
+    color: black;
+    background-color: #E57834;
+    border: 3px solid white;
+}
+
+
+
 .backspace {
-    width: 160px;
+    width: 164px;
+    box-sizing: border-box;
 }
 
 .equals {
-    width: 160px;
+    width: 164px;
 }
 
